refactor: Getting ReSharper to sh-- up.

--- a/Forum/Components/CascadingDbContext.razor
+++ b/Forum/Components/CascadingDbContext.razor
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.EntityFrameworkCore
+@* ReSharper disable once InconsistentNaming *@
 @inject IDbContextFactory<Model.Database> DbContext
 @implements IDisposable
 
