--- a/Forum/Components/RedirectToLogin.razor
+++ b/Forum/Components/RedirectToLogin.razor
@@ -1,4 +1,5 @@
-﻿@inject NavigationManager NavMan
+﻿@* ReSharper disable once InconsistentNaming *@
+@inject NavigationManager NavMan
 
 @code {
 	[CascadingParameter]
