--- a/Forum/Shared/MainLayout.razor
+++ b/Forum/Shared/MainLayout.razor
@@ -1,4 +1,5 @@
 @inherits LayoutComponentBase
+@* ReSharper disable once InconsistentNaming *@
 @inject Data.InfoMessage MessageService
 
 <div class="page">
