--- a/Forum/Pages/Register.razor
+++ b/Forum/Pages/Register.razor
@@ -2,9 +2,13 @@
 @using BCrypt.Net;
 @using System.ComponentModel.DataAnnotations;
 @using Microsoft.Extensions.Configuration 
+@* ReSharper disable once InconsistentNaming *@
 @inject NavigationManager NavigationManager 
+@* ReSharper disable once InconsistentNaming *@
 @inject NavigationManager NavMan 
+@* ReSharper disable once InconsistentNaming *@
 @inject IConfiguration Config
+@* ReSharper disable once InconsistentNaming *@
 @inject Data.InfoMessage MessageService
 
 <div class="main text-center mt-5 ml-auto mr-auto form-bigger">
