--- a/Forum/Components/TrendingNow.razor
+++ b/Forum/Components/TrendingNow.razor
@@ -22,7 +22,7 @@
 	@if (0 == t.Popularity) continue;
 
 	<div id="tag_container" class="row">
-		<a href="/search?q=#@t.Name">#@t.Name</a><p>@t.Popularity</p>
+		<a href="/?q=#@t.Name">#@t.Name</a><p>@t.Popularity</p>
 	</div>
 }
 
