Automatically login when in Development Hosting-Environment

--- a/Forum/Components/InfoMessage.razor
+++ b/Forum/Components/InfoMessage.razor
@@ -61,7 +61,7 @@
 	{
 		_style = "";
 		StateHasChanged();
-		_timer?.Start();
+		try { _timer?.Start(); } catch (ObjectDisposedException) { }
 	}
 
 	private void Hide()
